--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                 rgba(0,0,0,0) 85%, 
                 #000 100%
             ),
-            url('https://videos.openai.com/az/vg-assets/task_01kbyhnbfhe84vrhgqjb8qbyg0%2F1765183008_img_0.webp?se=2025-12-14T00%3A00%3A00Z&sp=r&sv=2024-08-04&sr=b&skoid=cfbc986b-d2bc-4088-8b71-4f962129715b&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-12-08T01%3A09%3A13Z&ske=2025-12-15T01%3A14%3A13Z&sks=b&skv=2024-08-04&sig=w6fGKN5Cv6su3nCMxuYFoo0wmjufbkm/tFlyNsn2dxQ%3D&ac=oaivgprodscus2');
+            url(styles/sky.png);
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
