--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                 rgba(0,0,0,0) 85%, 
                 #000 100%
             ),
-            url(styles/sky.png);
+            url(styles/sky1.png);
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
