--- a/index.html
+++ b/index.html
@@ -454,6 +454,18 @@
             padding-bottom: 50px;
             margin-top: 30px;
         }
+
+
+.work-link {
+    color: #fc7c7c;
+    text-decoration: none;
+    transition: text-decoration-color 0.3s ease;
+}
+
+.work-link:hover {
+    text-decoration: underline;
+}
+
     </style>
 </head>
 
@@ -495,6 +507,14 @@
 
                 <p>Hi there!</p><br>
                 <p>I'm interested in how software and hardware blend to create meaningful solutions.</p><br>
+<p>
+  Currently working on 
+  <a href="https://www.linkedin.com/company/109938960/" target="_blank" class="work-link">Rayvn Labs</a> 
+  and 
+  <a href="https://www.vre.pes.edu/" target="_blank" class="work-link">Vega Racing Electric</a>
+</p><br>
+
+
                 <p>📍Somewhere between <span style="color: #fc7c7c;">reality</span> and a <span style="color: #fc7c7c;">joke gone too far</span></p><br>
             </div>
 
@@ -692,44 +712,21 @@
     <!-- ARTICLES -->
     <div class="article-grid">
 
-        <!-- C ARTICLE -->
-        <div class="article-card" data-tags="programming-languages c">
-            <a href="https://github.com/rh3nium/C" target="_blank">
-                <h3>C Basics — Programs and Examples</h3>
-                <img src="img/C Basics.png" alt="C basics">
-                <p>
-                    C is a powerful, general-purpose programming language that provides a foundation
-                    for many modern languages. Known for its efficiency and control, C is commonly
-                    used in system programming, embedded development, operating systems, and video games.
-                </p>
+        <div class="article-card" data-tags="ai/ml robotics">
+            <a href="https://github.com/rh3nium" target="_blank">
+                <h3>Intro to Path Planning Algorithms</h3>
+                <img src="img/track.png" alt="path planning">
+                <p>An introductory overview of core path planning algorithms used in robotics and autonomous systems, with a focus on popular approaches such as A*, Dijkstra’s algorithm, and RRT (Rapidly-exploring Random Trees), explaining how agents navigate from start to goal while avoiding obstacles and optimizing efficiency.</p>
             </a>
             <div class="article-tags">
-                <span>#programming-languages</span>
-                <span>#c</span>
+                <span>#ai/ml</span>
+                <span>#robotics</span>
             </div>
         </div>
 
-        <!-- PYTHON ARTICLE -->
-        <div class="article-card" data-tags="programming-languages python">
-            <a href="https://github.com/rh3nium/Python" target="_blank">
-                <h3>Python Basics — Programs and Examples</h3>
-                <img src="img/Python Basics.png" alt="Python basics">
-                <p>
-                    Python is a powerful, versatile, high-level, interpreted, object-oriented programming
-                    language, driving innovation across data science, machine learning/deep learning,
-                    web development, and automation.
-                </p>
-            </a>
-            <div class="article-tags">
-                <span>#programming-languages</span>
-                <span>#python</span>
-            </div>
-        </div>
-
-        <!-- BASH ARTICLE -->
         <div class="article-card" data-tags="programming-languages bash">
-            <a href="https://github.com/rh3nium/Bash" target="_blank">
-                <h3>Bash Basics — Programs and Automation</h3>
+            <a href="https://github.com/rh3nium" target="_blank">
+                <h3></h3>
                 <img src="img/Bash Basics.png" alt="Bash basics">
                 <p>
                     Bash (short for Bourne Again Shell) is a command-line language and scripting shell
@@ -743,7 +740,18 @@
             </div>
         </div>
 
-
+        <div class="article-card" data-tags="bash linux">
+            <a href="https://github.com/rh3nium" target="_blank">
+                <h3>Linux Commands Collection</h3>
+                <img src="img/linux.png" alt="Linux commands">
+                <p>An evergoing collection of Linux shell commands including how to run them.</p>
+            </a>
+            <div class="article-tags">
+                <span>#bash</span>
+                <span>#linux</span>
+            </div>
+        </div>
+        
         <div class="article-card" data-tags="programming-languages c">
             <a href="https://github.com/rh3nium/C" target="_blank">
                 <h3>C Basics — Programs and Examples</h3>
