--- a/index.html
+++ b/index.html
@@ -388,15 +388,17 @@
 /* TAGS */
 .article-tags {
     margin: 0 1rem;
+    font-family: 'Titillium Web', sans-serif;
     display: flex;
     gap: 10px;
     flex-wrap: wrap;
 }
 .article-tags span {
-    font-size: 14px;
+    font-size: 15px;
+    font-family: 'Titillium Web', sans-serif;
     color: #fc7c7c;
     border: 1px solid #fc7c7c;
-    padding: 2px 10px;
+    padding: 4px 10px;
     border-radius: 999px;
 }
 
