--- a/index.html
+++ b/index.html
@@ -708,6 +708,10 @@
             <li data-tag="python">Python</li>
             <li data-tag="c">C</li>
             <li data-tag="bash">Bash</li>
+            <li data-tag="ai-ml">AI/ML</li>
+            <li data-tag="robotics">Robotics</li>
+            <li data-tag="linux">Linux</li>
+
         </ul>
     </aside>
 
@@ -716,8 +720,8 @@
 
         <div class="article-card" data-tags="ai/ml robotics">
             <a href="https://github.com/rh3nium" target="_blank">
-                <h3>Intro to Path Planning Algorithms</h3>
                 <img src="img/track.png" alt="path planning">
+                <h3>Intro to Path Planning Algorithms</h3>
                 <p>An introductory overview of core path planning algorithms used in robotics and autonomous systems, with a focus on popular approaches such as A*, Dijkstra’s algorithm, and RRT (Rapidly-exploring Random Trees), explaining how agents navigate from start to goal while avoiding obstacles and optimizing efficiency.</p>
             </a>
             <div class="article-tags">
@@ -726,26 +730,10 @@
             </div>
         </div>
 
-        <div class="article-card" data-tags="programming-languages bash">
-            <a href="https://github.com/rh3nium" target="_blank">
-                <h3></h3>
-                <img src="img/Bash Basics.png" alt="Bash basics">
-                <p>
-                    Bash (short for Bourne Again Shell) is a command-line language and scripting shell
-                    used primarily on Unix and Linux systems to automate tasks. It serves both as an
-                    interactive shell and as a scripting language for repetitive or complex operations.
-                </p>
-            </a>
-            <div class="article-tags">
-                <span>#programming-languages</span>
-                <span>#bash</span>
-            </div>
-        </div>
-
         <div class="article-card" data-tags="bash linux">
             <a href="https://github.com/rh3nium" target="_blank">
-                <h3>Linux Commands Collection</h3>
                 <img src="img/linux.png" alt="Linux commands">
+                <h3>Linux Commands Collection</h3>
                 <p>An evergoing collection of Linux shell commands including how to run them.</p>
             </a>
             <div class="article-tags">
