--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
 
         <div class="article-card" data-tags="bash linux">
             <a href="https://github.com/rh3nium" target="_blank">
-                <img src="img/linux.png" alt="Linux commands">
+                <img src="img/linuxcommands.png" alt="Linux commands">
                 <h3>Linux Commands Collection</h3>
                 <p>An evergoing collection of Linux shell commands including how to run them.</p>
             </a>
