--- a/linuxcommands/gnu-coreutils.html
+++ b/linuxcommands/gnu-coreutils.html
@@ -257,8 +257,8 @@ pre {
         <img src="../styles/banner.png" height="80">
     </a>
     <div class="menu">
-        <a href="../index.html#about">About</a> |
-        <a href="../index.html#projects">Projects</a> |
+        <a href="../index.html#about">About</a><span style="color: red">|</span>
+        <a href="../index.html#projects">Projects</a><span style="color: red">|</span>
         <a href="../index.html#blog"><span style="color: #fc7c7c">Blog</span></a>
     </div>
 </div>
