--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
         </div>
 
         <div class="article-card" data-tags="bash linux">
-            <a href="https://3riy.github.io/linuxcommands/intro.html" target="_blank">
+            <a href="https://3riy.github.io/linuxcommands/introduction.html" target="_blank">
                 <img src="img/linuxcommands.png" alt="Linux commands">
                 <h3>Linux Commands Guidebook</h3>
                 <p>An evergoing collection of Linux shell commands including how to run them. Multiple pages covering commands by sub-topic.
