--- a/linuxcommands/gnu-coreutils.html
+++ b/linuxcommands/gnu-coreutils.html
@@ -3,15 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <title>GNU Core Utilities - Linux Commands Guidebook</title>
-
-<!-- Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300..700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="styles/styles.css">
 
 <style>
 html {
@@ -275,6 +273,7 @@ pre {
 </div>
 
 <div class="page-dropdown" id="pageDropdown">
+    <a href="introduction.html">Introduction</a>
     <a href="gnu-coreutils.html" class="active-page">1. GNU Coreutils</a>
     <a href="text-processing.html">2. Text Processing</a>
     <a href="processes-and-system.html">3. Processes & System</a>
