--- a/linuxcommands/gnu-coreutils.html
+++ b/linuxcommands/gnu-coreutils.html
@@ -274,7 +274,7 @@ pre {
 </div>
 
 <div class="page-dropdown" id="pageDropdown">
-    <a href="introduction.html">Introduction</a>
+    <a href="introduction.html">INTRODUCTION</a>
     <a href="gnu-coreutils.html" class="active-page">1. GNU Coreutils</a>
     <a href="text-processing.html">2. Text Processing</a>
     <a href="processes-and-system.html">3. Processes & System</a>
