--- a/linuxcommands/introduction.html
+++ b/linuxcommands/introduction.html
@@ -237,7 +237,7 @@ body {
 
 <aside class="sidebar">
     <div class="sidebar-header" onclick="togglePages()">
-        <h3>INTRODUCTION</h3>
+        <h3>INTRO</h3>
         <span class="arrow">▼</span>
     </div>
 
@@ -254,7 +254,7 @@ body {
     </div>
 
     <ul>
-        <li><a href="#overview">Overview</a></li>
+        <li><a href="#overviewIntroduction">Overview</a></li>
         <li><a href="#guidebook">About the Guidebook</a></li>
         <li><a href="#linux">Why Linux?</a></li>
         <li><a href="#topics">All Page Topics</a></li>
@@ -263,13 +263,13 @@ body {
 
 <main class="content">
 <section id="overview" class="section">
-    <h2>INTRODUCTION</h2>
-    <img src="../img/linuxintro.png" alt="Linux Introduction">
+    <h2>Overview</h2>
+    <img src="intro.png" alt="Linux Introduction">
     <p>Welcome to the Linux Commands Guidebook! This guidebook helps users of all levels understand and use Linux commands efficiently. It provides structured guidance from basic operations to advanced system tasks.</p>
 </section>
 
 <section id="guidebook" class="section">
-    <h2>About the Guidebook</h2>
+    <h2>About this Guidebook</h2>
     <p>This guidebook is suitable for beginners, students, developers, and system administrators who want to improve their command-line skills. You can use it to:</p>
     <ul>
         <li>Learn Linux commands in a structured manner.</li>
