--- a/linuxcommands/introduction.html
+++ b/linuxcommands/introduction.html
@@ -254,9 +254,9 @@ body {
     </div>
 
     <ul>
-        <li><a href="#overviewIntroduction">Overview</a></li>
+        <li><a href="#overview">Overview</a></li>
         <li><a href="#guidebook">About the Guidebook</a></li>
-        <li><a href="#linux">Why Linux?</a></li>
+        <li><a href="#whylinux">Why Linux?</a></li>
         <li><a href="#topics">All Page Topics</a></li>
     </ul>
 </aside>
@@ -279,7 +279,7 @@ body {
     </ul>
 </section>
 
-<section id="linux" class="section">
+<section id="whylinux" class="section">
     <h2>Why Linux?</h2>
     <p>Linux is a powerful operating system widely used for servers, programming, networking, and embedded systems. Learning Linux commands allows you to:</p>
     <ul>
