--- a/linuxcommands/introduction.html
+++ b/linuxcommands/introduction.html
@@ -116,7 +116,8 @@ body {
     margin-top: 12px;
 }
 .section img {
-    max-width: 100%;
+    max-width: 50%;
+    height: auto;
     margin: 20px 0;
     border-radius: 6px;
 }
