--- a/linuxcommands/gnu-coreutils.html
+++ b/linuxcommands/gnu-coreutils.html
@@ -26,19 +26,18 @@ body {
 }
 
 /* ================= TOPBAR ================= */
-.topbar {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 100px;
-    z-index: 9999;
-    background: rgba(0,0,0,0.9);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 40px;
-    box-sizing: border-box;
-}
+        .topbar {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            z-index: 9999;
+            background: rgba(0,0,0,0.9);
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 40px;
+            box-sizing: border-box;
+        }
 .menu a {
     color:white;
     text-decoration:none;
@@ -253,13 +252,18 @@ pre {
 <div id="cursor-trail-container2"></div>
 
 <div class="topbar">
-    <a href="../index.html">
-        <img src="../styles/banner.png" height="80">
-    </a>
+    <div class="header" style="display: flex; align-items: center;">
+        <a href="../index.html">
+            <img src="../styles/banner.png" height="80" display: block;>
+        </a>
+    </div>
     <div class="menu">
         <a href="../index.html#about">About</a><span style="color: red">|</span>
         <a href="../index.html#projects">Projects</a><span style="color: red">|</span>
         <a href="../index.html#blog"><span style="color: #fc7c7c">Blog</span></a>
+    </div>
+    <div class="social-icons">
+        <a href="https://github.com/3riy" target="_blank" class="fab fa-github"></a>
     </div>
 </div>
 
