--- a/linuxcommands/gnu-coreutils.html
+++ b/linuxcommands/gnu-coreutils.html
@@ -260,6 +260,7 @@ pre {
     <div class="menu">
         <a href="../index.html#about">About</a><span style="color: red">|</span>
         <a href="../index.html#projects">Projects</a><span style="color: red">|</span>
+        <a href="../index.html#learn" class="menu-link">Learn</a><span style="color: red">|</span>
         <a href="../index.html#blog"><span style="color: #fc7c7c">Blog</span></a>
     </div>
     <div class="social-icons">
