--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     /* start black and fade to sky image with gradient overlay */
     background: linear-gradient(to bottom, black 0%, black 20%, rgba(255,255,255,0) 25%), 
-                url('../styles/sky1.png') center center / cover no-repeat;
+                url('styles/sky1.png') center center / cover no-repeat;
     
     opacity: 0;
     transition: opacity 1.5s ease-in-out;
