--- a/linuxcommands/introduction.html
+++ b/linuxcommands/introduction.html
@@ -225,7 +225,7 @@ body {
 <div class="topbar">
     <div class="header" style="display: flex; align-items: center;">
         <a href="../index.html">
-            <img src="../styles/banner.png" height="80" display: block;>
+            <img src="../styles/banner.png"; alt="Logo" style="height: 80px; display: block;" />
         </a>
     </div>
     <div class="menu">
