--- a/index.html
+++ b/index.html
@@ -22,16 +22,31 @@
 .projects-bg-wrapper {
     position: relative;
     overflow: hidden;
-
-    /* Background: fade in from black, sky image, fade out to black */
-    background: 
-        linear-gradient(to bottom, black 0%, rgba(0,0,0,0) 10%), /* fade in from top */
-        url('styles/sky1.png') center center / cover no-repeat,   /* sky image */
-        linear-gradient(to bottom, rgba(0,0,0,0) 90%, black 100%); /* fade out at bottom */
-    
-    background-blend-mode: overlay; /* blend the gradients with the image */
 }
 
+/* Layer the background using a pseudo-element for smooth fade */
+.projects-bg-wrapper::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none; /* allow clicks through it */
+
+    /* Background image with top and bottom fade using gradient mask */
+    background: url('styles/sky1.png') center center / cover no-repeat;
+    
+    /* Create fade in/out using a mask */
+    mask-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,1) 10%, rgba(0,0,0,1) 90%, rgba(0,0,0,0));
+    -webkit-mask-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,1) 10%, rgba(0,0,0,1) 90%, rgba(0,0,0,0));
+    mask-repeat: no-repeat;
+    mask-size: cover;
+    -webkit-mask-repeat: no-repeat;
+    -webkit-mask-size: cover;
+
+    z-index: -1; /* behind content */
+}
 </style>
 
 <body>
