--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
             }
         }
 
-        const textProj = "Projects at the intersection of software and hardware";
+        const textProj = "Projects";
         const speedProj = 55;
         let indexProj = 0;
 
