--- a/linuxcommands/introduction.html
+++ b/linuxcommands/introduction.html
@@ -225,19 +225,22 @@ body {
 <div class="topbar">
     <div class="header" style="display: flex; align-items: center;">
         <a href="../index.html">
-            <img src="../styles/banner.png"; alt="Logo" style="height: 80px; display: block;" />
+            <img src="../styles/banner.png" alt="Logo" style="height: 80px; display: block;" />
         </a>
     </div>
+      
     <div class="menu">
-        <a href="../index.html#about">About</a><span style="color: red">|</span>
-        <a href="../index.html#projects">Projects</a><span style="color: red">|</span>
+        <a href="../index.html#about" class="menu-link active">About</a><span style="color: red">|</span>
+        <a href="../index.html#about" class="menu-link">Projects</a><span style="color: red">|</span>
         <a href="../index.html#learn" class="menu-link">Learn</a><span style="color: red">|</span>
-        <a href="../index.html#blog"><span style="color: #fc7c7c">Blog</span></a>
+        <a href="../index.html#blog" class="menu-link"><span style="color: #fc7c7c">Blog</span></a>
     </div>
+      
     <div class="social-icons">
         <a href="https://github.com/3riy" target="_blank" class="fab fa-github"></a>
     </div>
 </div>
+    <br>
 
 <h1 class="page-title">Linux Commands Guidebook</h1>
 
