--- a/linuxcommands/introduction.html
+++ b/linuxcommands/introduction.html
@@ -230,10 +230,10 @@ body {
     </div>
       
     <div class="menu">
-        <a href="../index.html#about" class="menu-link active">About</a><span style="color: red">|</span>
+        <a href="../index.html#about" class="menu-link">About</a><span style="color: red">|</span>
         <a href="../index.html#about" class="menu-link">Projects</a><span style="color: red">|</span>
         <a href="../index.html#learn" class="menu-link">Learn</a><span style="color: red">|</span>
-        <a href="../index.html#blog" class="menu-link"><span style="color: #fc7c7c">Blog</span></a>
+        <a href="../index.html#blog" class="menu-link active"><span style="color: #fc7c7c">Blog</span></a>
     </div>
       
     <div class="social-icons">
