--- a/linuxcommands/text-processing.html
+++ b/linuxcommands/text-processing.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Text Processing - Linux Commands Guidebook</title>
+<title>Text Processing - Linux Commands Guidebook | Riya halbhavi</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
@@ -21,30 +21,38 @@ body {
     overflow-x: hidden;
 }
 
-/* TOPBAR */
-        .topbar {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            z-index: 9999;
-            background: rgba(0,0,0,0.9);
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px 40px;
-            box-sizing: border-box;
-        }
+/* ================= TOPBAR (FIXED SPACING) ================= */
+.topbar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 9999;
+    background: rgba(0,0,0,0.9);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 40px;
+    box-sizing: border-box;
+}
+
+.menu {
+    display: flex;
+    align-items: center;
+    gap: 8px; /* Precise gap control matching second code */
+}
 
 .menu a {
     color: white;
     text-decoration: none;
-    margin: 0 6px;
+    margin: 0; 
+    transition: color 0.2s ease;
 }
+
 .menu a:hover { color: #fc7c7c; }
 
 /* TITLE */
 .page-title {
-    margin-top: 65px;
+    margin-top: 85px;
     text-align: center;
     font-family: 'Silkscreen', monospace;
     font-size: 44px;
@@ -223,16 +231,17 @@ pre {
 <div class="topbar">
     <div class="header" style="display: flex; align-items: center;">
         <a href="../index.html">
-            <img src="../styles/banner.png" height="80" display: block;>
+            <img src="../styles/banner.png" height="80" style="display: block;">
         </a>
     </div>
     <div class="menu">
         <a href="../index.html#about">About</a><span style="color: red">|</span>
         <a href="../index.html#projects">Projects</a><span style="color: red">|</span>
-        <a href="../index.html#blog"><span style="color: #fc7c7c">Blog</span></a>
+        <a href="../index.html#learn">Learn</a><span style="color: red">|</span>
+        <a href="../index.html#blog" style="color: #fc7c7c">Blog</a>
     </div>
     <div class="social-icons">
-        <a href="https://github.com/3riy" target="_blank" class="fab fa-github"></a>
+        <a href="https://github.com/3riy" target="_blank" class="fab fa-github" style="color: white; text-decoration: none;"></a>
     </div>
 </div>
 
@@ -269,7 +278,6 @@ pre {
 
 <main class="content">
 
-<!-- ================= SEARCHING ================= -->
 <section id="search" class="section">
 <h2>Searching Text</h2>
 
@@ -321,7 +329,6 @@ pre {
 </div>
 </section>
 
-<!-- ================= TRANSFORMING ================= -->
 <section id="transform" class="section">
 <h2>Transforming Text</h2>
 
@@ -373,7 +380,6 @@ pre {
 </div>
 </section>
 
-<!-- ================= COMPARING ================= -->
 <section id="compare" class="section">
 <h2>Comparing & Analyzing Text</h2>
 
