--- a/linuxcommands/introduction.html
+++ b/linuxcommands/introduction.html
@@ -27,41 +27,49 @@ body {
     overflow-x: hidden;
 }
 
-/* ================= TOPBAR ================= */
-        .topbar {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            z-index: 9999;
-            background: rgba(0,0,0,0.9);
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px 40px;
-            box-sizing: border-box;
-        }
+/* ================= TOPBAR (FIXED FLEXBOX SPACING) ================= */
+.topbar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 9999;
+    background: rgba(0,0,0,0.9);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 40px;
+    box-sizing: border-box;
+}
+
+.menu {
+    display: flex;
+    align-items: center;
+    gap: 8px; /* This handles the precise spacing matching your second code */
+}
 
 .menu a {
-    color:white;
-    text-decoration:none;
-    margin:0 6px;
+    color: white;
+    text-decoration: none;
+    margin: 0; /* Removed the 6px margin that was causing wide spacing */
+    transition: color 0.2s ease;
 }
-.menu a:hover { color:#fc7c7c; }
+
+.menu a:hover { color: #fc7c7c; }
 
 /* ================= PAGE TITLE ================= */
 .page-title {
-    margin-top: 65px;
-    text-align:center;
-    font-family:'Silkscreen', monospace;
-    font-size:44px;
-    letter-spacing:2px;
+    margin-top: 85px;
+    text-align: center;
+    font-family: 'Silkscreen', monospace;
+    font-size: 44px;
+    letter-spacing: 2px;
 }
 
 /* ================= LAYOUT ================= */
 .layout {
-    display:flex;
-    padding:40px 60px;
-    gap:40px;
+    display: flex;
+    padding: 40px 60px;
+    gap: 40px;
 }
 
 /* ================= SIDEBAR ================= */
@@ -70,46 +78,44 @@ body {
     top: 260px;
     left: 60px;
     width: 280px;
-    border-right:1px solid #333;
+    border-right: 1px solid #333;
     padding-right: 20px;
 }
 .sidebar h3 {
-    color:#fc7c7c;
-    font-family:'Silkscreen', monospace;
+    color: #fc7c7c;
+    font-family: 'Silkscreen', monospace;
     font-size: 35px;
 }
 .sidebar ul {
     font-size: 22px;
-    list-style:none;
-    padding:0;
+    list-style: none;
+    padding: 0;
 }
 .sidebar li {
-    margin-bottom:12px;
+    margin-bottom: 12px;
 }
-.sidebar a:hover {
-    color:#fc7c7c;
-}
+.sidebar a:hover { color: #fc7c7c; }
 .sidebar a {
-    color:#aaa;
-    text-decoration:none;
+    color: #aaa;
+    text-decoration: none;
 }
 .sidebar a.active {
-    color:#fc7c7c;
+    color: #fc7c7c;
     font-weight: bold;
 }
 
 /* ================= CONTENT ================= */
 .content {
     margin-left: 325px;
-    flex:1;
+    flex: 1;
 }
 .section {
-    margin-bottom:80px;
+    margin-bottom: 80px;
     scroll-margin-top: 140px;
 }
 .section h2 {
-    color:#fc7c7c;
-    font-family:'Titillium Web', sans-serif;
+    color: #fc7c7c;
+    font-family: 'Titillium Web', sans-serif;
     font-size: 45px;
 }
 .section p, .section ul {
@@ -205,15 +211,8 @@ body {
 
 /* ================= MOBILE ================= */
 @media (max-width: 900px) {
-    .sidebar {
-        position: static;
-        width:100%;
-        border-right:none;
-        padding-right:0;
-    }
-    .content {
-        margin-left:0;
-    }
+    .sidebar { position: static; width: 100%; border-right: none; padding-right: 0; }
+    .content { margin-left: 0; }
 }
 </style>
 </head>
@@ -232,16 +231,16 @@ body {
       
     <div class="menu">
         <a href="../index.html#about" class="menu-link">About</a><span style="color: red">|</span>
-        <a href="../index.html#about" class="menu-link">Projects</a><span style="color: red">|</span>
+        <a href="../index.html#projects" class="menu-link">Projects</a><span style="color: red">|</span>
         <a href="../index.html#learn" class="menu-link">Learn</a><span style="color: red">|</span>
         <a href="../index.html#blog" class="menu-link active"><span style="color: #fc7c7c">Blog</span></a>
     </div>
       
     <div class="social-icons">
-        <a href="https://github.com/3riy" target="_blank" class="fab fa-github"></a>
+        <a href="https://github.com/3riy" target="_blank" class="fab fa-github" style="color: white; text-decoration: none;"></a>
     </div>
 </div>
-    <br>
+<br>
 
 <h1 class="page-title">Linux Commands Guidebook</h1>
 
