--- a/linuxcommands/text-processing.html
+++ b/linuxcommands/text-processing.html
@@ -9,6 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300..700&display=swap" rel="stylesheet">
+<link rel="icon" href="../styles/rh.png" type="image/png">
 <link rel="stylesheet" href="../styles/styles.css">
 
 <style>
@@ -245,7 +246,7 @@ pre {
     </div>
 </div>
 
-<h1 class="page-title">Linux Commands Guidebook</h1>
+<h2 class="page-title">Linux Commands Guidebook</h1>
 
 <div class="layout">
 
