--- a/index.html
+++ b/index.html
@@ -89,10 +89,8 @@
                 <p>Hi there!</p><br>
                 <p>I'm interested in how software and hardware blend to create meaningful solutions.</p><br>
 <p>
-  Currently working on 
-  <a href="https://www.linkedin.com/company/109938960/" target="_blank" class="work-link">Rayvn Labs</a> 
-  and 
-  <a href="https://www.vre.pes.edu/" target="_blank" class="work-link">Vega Racing Electric</a>
+  A member of 
+  <a href="https://www.vre.pes.edu/" target="_blank" class="work-link">Vega Racing Electric</a> club
 </p><br>
 
 
